--- a/StepByStep.cbp
+++ b/StepByStep.cbp
@@ -32,11 +32,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Accout.h" />
+		<Unit filename="Account.cpp" />
+		<Unit filename="Account.h" />
+		<Unit filename="AccoutHandler.cpp" />
+		<Unit filename="AccoutHandler.h" />
 		<Unit filename="BankingCommonDel.h" />
 		<Unit filename="BankingSystemMain.cpp" />
-		<Unit filename="Declaration.h" />
-		<Unit filename="DefineFunc.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
