--- a/StepByStep.cbp
+++ b/StepByStep.cbp
@@ -38,6 +38,8 @@
 		<Unit filename="AccoutHandler.h" />
 		<Unit filename="BankingCommonDel.h" />
 		<Unit filename="BankingSystemMain.cpp" />
+		<Unit filename="HighCreditAccount.h" />
+		<Unit filename="NormalAccount.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
