StepByStep ver 11.0 Defin Exception Class

--- a/StepByStep.cbp
+++ b/StepByStep.cbp
@@ -34,6 +34,7 @@
 		</Compiler>
 		<Unit filename="Account.cpp" />
 		<Unit filename="Account.h" />
+		<Unit filename="AccountException.h" />
 		<Unit filename="AccoutHandler.cpp" />
 		<Unit filename="AccoutHandler.h" />
 		<Unit filename="BankingCommonDel.h" />
